# crypto_trading_manager

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  PRD.md  README.md  codecov.yml  debug_start.sh  docker-compose.yml  package-lock.json  pyproject.toml  security-check.sh  setup.sh  start_all.sh  start_backend.sh  start_frontend.sh  update-deps.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  codeql.yml  security.yml
backend/: .bandit  .env.development  .env.example  .env.production  .flake8  Dockerfile  configure.py  demo_dry_run.py  pyproject.toml  requirements.txt  start_server.py
backend/app/: main.py
backend/app/api/: api_keys.py  market_data.py  portfolio.py  trading.py  trading_mode.py
backend/app/config/: __init__.py  secure_config.py
backend/app/core/: config.py  database.py
backend/app/database/: __init__.py
backend/app/models/: database_models.py
backend/app/services/: bitvavo_api_secure.py  bitvavo_enterprise_service.py  db_api_key_service.py  encryption_service.py  market_service.py  portfolio_service.py  risk_service.py  trading_mode.py  trading_service.py
backend/stubs/python_bitvavo_api/: __init__.pyi  bitvavo.pyi
backend/tests/: conftest.py  test_api_endpoints.py  test_api_keys.py  test_bitvavo_api.py  test_bitvavo_enterprise_service.py  test_bitvavo_helpers.py  test_database_models.py  test_db_api_key_service.py  test_encryption_service.py  test_trading_logic.py  test_trading_mode.py  test_trading_mode_ui.py
frontend/: .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  index.tsx  setupTests.ts
frontend/src/__tests__/: App.test 2.js  App.test.js  TradingModeSettings.test 2.js  TradingModeSettings.test.js
frontend/src/components/: APIKeySettings.css  APIKeySettings.tsx  Dashboard.js  Dashboard.tsx  MarketData.js  MarketData.tsx  Navbar.tsx  Portfolio.js  Portfolio.tsx  TradingModeSettings.css  TradingModeSettings.tsx  TradingModeSettingsOld.jsx  TradingPanel.js  TradingPanel.tsx
frontend/src/styles/: globals.css
frontend/src/tests/: Dashboard.test.tsx  Navbar.test.tsx
frontend/src/types/: index.ts
frontend/tests/: visual.spec.ts
scripts/: fix_typing_bulk.py  type-check-all.sh  type-check.sh
